# coordis

./: .gitignore  .pre-commit-config.yaml  README.md  classdefinitions_refactor_later.py  config.txt  database.db  event.py  justfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: tests.yml
commands/: __init__.py  base.py  event_command.py  help_command.py  home_command.py  ping_command.py  user_command.py
core/: __init__.py  alarm.py  bot.py  constants.py  registry.py
db/: base.py
db/models/: __init__.py  event.py  notification.py  user.py
db/repositories/: event_repo.py  notification_repo.py  user_repo.py
notify/: notify.py
services/: event_service.py  user_service.py
src/coordis/: __main__.py
src/coordis/db/: __init__.py  _db.py  enums.py  event.py  tables.py  user.py
tests/: conftest.py  test_event_command.py  test_help_command.py  test_user_command.py
ui/: event_ui.py  help_ui.py  ping_ui.py  user_ui.py
